fix broken connections, some renaming

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -29,7 +29,7 @@
 
 							<div class="col-md-4 col-xs-4">
 			                    <div class="navbar-header">
-			                        <a class="navbar-brand" style="background-color: #000;" href="./vatayana">vātāyana</a>
+			                        <a class="navbar-brand" style="background-color: #000;" href="./">vātāyana</a>
 		                    	</div>
 							</div>
 
@@ -95,7 +95,7 @@
 
 			</form>
 
-            {{ doc_explore_output | safe }}
+            {{ docExploreInner_HTML | safe }}
 
         </div><!-- container -->
 
