--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
 							<div class="col-md-4 col-xs-4">
 			                    <div class="navbar-header">
-			                        <a class="navbar-brand" style="background-color: #000;" href="./vatayana">vātāyana</a>
+			                        <a class="navbar-brand" style="background-color: #000;" href="./">vātāyana</a>
 		                    	</div>
 							</div>
 
@@ -96,6 +96,13 @@
 						<input type="submit" class="btn btn-block btn-primary" value="Compare Docs" />
 					</form>
 				</div>
+			</div>
+			<div class="row">	        	
+				<div class="col-md-3">
+					<form method="get" action="textPrioritize">
+						<input type="submit" class="btn btn-block btn-primary" value="Prioritize Texts" />
+					</form>
+				</div>
 				<div class="col-md-3">
 					<form method="get" action="textView">
 						<input type="submit" class="btn btn-block btn-primary" value="View Texts" />
@@ -126,14 +133,6 @@
 
         	<br><br>
 
-			<div class="row">	        	
-				<div class="col-md-3">
-					<form method="get" action="textPrioritize">
-						<input type="submit" class="btn btn-block btn-primary" value="Prioritize Texts" />
-					</form>
-				</div>
-			</div>
-
 			<div class="row">
 				<div class="col-md-3">
 					<form method="get" action="topicToggle">
@@ -141,8 +140,8 @@
 					</form>
 				</div>
 				<div class="col-md-3">
-					<form method="get" action="topicVisualize">
-						<input type="submit" class="btn btn-block btn-primary" value="Visualize Topics" />
+					<form method="get" action="topicVisualizeLDAvis">
+						<input type="submit" class="btn btn-block btn-primary" value="Visualize Topics (LDAvis)" />
 					</form>
 				</div>
 				<div class="col-md-3">
