--- a/templates/topicAdjust.html
+++ b/templates/topicAdjust.html
@@ -26,7 +26,7 @@
 
 							<div class="col-md-4 col-xs-4">
 			                    <div class="navbar-header">
-			                        <a class="navbar-brand" style="background-color: #000;" href="./vatayana">vātāyana</a>
+			                        <a class="navbar-brand" style="background-color: #000;" href="./">vātāyana</a>
 		                    	</div>
 							</div>
 
@@ -86,7 +86,7 @@
 
            <p>Changes you make will remain valid for your personal browser session, i.e., until cookies and other site data are cleared.</p>
 
-           {{ topicAdjustOutput_HTML | safe }}
+           {{ topicAdjustInner_HTML | safe }}
 
         </div><!-- container -->
 
