--- a/templates/topicToggle.html
+++ b/templates/topicToggle.html
@@ -26,7 +26,7 @@
 
 							<div class="col-md-4 col-xs-4">
 			                    <div class="navbar-header">
-			                        <a class="navbar-brand" style="background-color: #000;" href="./vatayana">vātāyana</a>
+			                        <a class="navbar-brand" style="background-color: #000;" href="./">vātāyana</a>
 		                    	</div>
 							</div>
 
@@ -84,7 +84,7 @@
 
            <p>(<i>Changes you make will remain valid for your personal browsr session, i.e., until cookies and other site data are cleared.</i>)</p>
 
-           {{ topicToggleOutput_HTML | safe }}
+           {{ topicToggleInner_HTML | safe }}
 
         </div><!-- container -->
 
