--- a/templates/docCompare.html
+++ b/templates/docCompare.html
@@ -26,7 +26,7 @@
 
 							<div class="col-md-4 col-xs-4">
 			                    <div class="navbar-header">
-			                        <a class="navbar-brand" style="background-color: #000;" href="./vatayana">vātāyana</a>
+			                        <a class="navbar-brand" style="background-color: #000;" href="./">vātāyana</a>
 		                    	</div>
 							</div>
 
@@ -106,7 +106,7 @@
 			</div>
 
 
-            {{ doc_compare_output | safe }}
+            {{ docCompareInner_HTML | safe }}
 
         </div><!-- container -->
 
