small updates to front pages (index, about, next, tutorial)

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,10 @@
 							</div>
 
 							<div class="col-md-8 col-xs-8">
-			                    <div class="navbar-header">
-			                        <a class="navbar-brand">: {{ page_subtitle }}</a>
-			                    </div>
-							</div>
+                                <div class="navbar-header" id="hiddenSubtitle" style="visibility: hidden">
+                                    <a class="navbar-brand">: {{ page_subtitle }}</a>
+                                </div>
+                            </div>
 
 						</div>
 
@@ -126,7 +126,8 @@
         		and (more simply)
         		with user-specific text prioritization.
         		Depending on the specific use case, however, 
-        		one or the other of these constraints may not be desired.
+        		the first of these constraints (topic similarity)
+        		may not be desired.
         		The controls below are meant to encourage advanced users to 
         		experiment and find what works best for them.
         	</p>
@@ -166,9 +167,9 @@
         	<br>
         	<p>documentation on GitHub
         		<ul>
-        			<li><a href="https://github.com/tylergneill/pramana-nlp">pramāṇa-nlp</a></li>
-        			<li><a href="https://github.com/tylergneill/skrutable_front_end">vātāyana</a></li>
-        			<li><a href="https://github.com/tylergneill/skrutable">skrutable</a></li>
+        			<li><a href="https://github.com/tylergneill/vatayana">vātāyana</a> (intertextuality research environment)</li>
+        			<li><a href="https://github.com/tylergneill/pramana-nlp">pramāṇa-nlp</a> (philosophical Sanskrit corpus + preliminary LDA analyis)</li>
+        			<li><a href="https://github.com/tylergneill/skrutable">skrutable</a> (text-processing toolkit used in corpus-building)</li>
         		</ul>
         	</p>
 
