fix path error to doc_plot imgs; replace missing gitignore

--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -126,14 +126,14 @@
 
 	<div class="col-md-6">
 		<h2>Topic Analysis</h2>
-		<img id="plot" src="/assets/vatayana/doc_plot_pngs/$doc_id_1.png" alt="oops" width="550" height="385">
+		<img id="plot" src="/assets/doc_plot_pngs/$doc_id_1.png" alt="oops" width="550" height="385">
 		$top_topics_summary_1
 	</div>
 
 
 	<div class="col-md-6">
 		<h2>Topic Analysis</h2>
-		<img id="plot" src="/assets/vatayana/doc_plot_pngs/$doc_id_2.png" alt="oops" width="550" height="385">
+		<img id="plot" src="/assets/doc_plot_pngs/$doc_id_2.png" alt="oops" width="550" height="385">
 		$top_topics_summary_2
 	</div>
 
