--- a/templates/docExploreInner.html
+++ b/templates/docExploreInner.html
@@ -36,7 +36,7 @@
 
 	<div class="col-md-6">
 		<h2>Topic Analysis</h2>
-		<img id="plot" src="/assets/vatayana/doc_plot_pngs/$query_id.png" alt="oops" width="550" height="385">
+		<img id="plot" src="/assets/doc_plot_pngs/$query_id.png" alt="oops" width="550" height="385">
 		$top_topics_summary
 	</div>
 
