--- a/templates/docExploreInner.html
+++ b/templates/docExploreInner.html
@@ -42,15 +42,20 @@
 
 	<div class="col-md-6">
 
-		<h2>Similar<span title="by topic, tf-idf">*</span> Docs of Priority Texts<span title="$priority_texts">*</span></h2>
-		<br>
-		$priority_col_content
+		<div>
+			<h2>Similar<span title="by topic, tf-idf">*</span> Docs of Priority Texts<span title="$priority_texts">*</span></h2>
+			<br>
+			$priority_col_content
+		</div>
 
 		<br><br>
 
-		<h2>Similar<span title="by topic">*</span> Docs of Non-Priority Texts<span title="$non_priority_texts">*</span></h2>
-		<br>
-		$secondary_col_content
+		<div style='display: none;'>
+
+			<h2>Similar<span title="by topic">*</span> Docs of Non-Priority Texts<span title="$non_priority_texts">*</span></h2>
+			<br>
+			$secondary_col_content
+		</div>
 
 	</div>
 
