--- a/templates/searchSettingsInner.html
+++ b/templates/searchSettingsInner.html
@@ -1,20 +1,8 @@
 <form method="post" action="searchSettings">
 
-	<h2>Shallow Search</h2>
+	<h2>Search Depth</h2>
 
-		$shallow_slider_HTML
-
-	</br>
-
-	<h2>Deep Search</h2>
-
-		$deep_slider_HTML
-
-	</br>
-
-	<h2>Default Depth</h2>
-
-	<!-- save changes button -->
+	<!-- depth radio buttons -->
 	<div class="row">
 		<div class="col-md-3">
 			<input type="radio" name="search_depth_radio" id="search_depth_radio_shallow" value="shallow" $search_depth_radio_shallow_checked_status />
@@ -23,6 +11,20 @@
   			<label for="search_depth_radio_deep">Deep</label>
 		</div>
 	</div>	
+
+	</br>
+
+	<h2>Shallow Search Parameters</h2>
+
+		$shallow_slider_HTML
+
+	</br>
+
+	<h2>Deep Search Parameters</h2>
+
+		$deep_slider_HTML
+
+	</br>
 
 	<!-- save changes button -->
 	<div class="row">
@@ -40,7 +42,8 @@
 
 	<h2>Reset to Default Values</h2>
 
-	<p>Default values = $search_N_defaults</p>
+	<p>The following values strike have been found to strike a good balance:</p>
+	<p>$search_N_defaults</p>
 
 	<div class="row">
 		<div class="col-md-3">
