small changes to appearance and text

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,8 +114,8 @@
         		on corpus documents (current total ≈ 22k docs).
 
         		Comparison by modeled LDA topics is fast and captures abstract semantics,
-        		whereas TF-IDF and Smith-Waterman emphasize word-level correspondences,
-        		albeit at relatively greater computational cost.
+        		whereas TF-IDF and Smith-Waterman emphasize word-level correspondences
+        		at relatively greater computational cost.
         	</p>
         	<p>
         		The advanced settings below aim to accomodate various use cases
@@ -127,8 +127,9 @@
         		<li>the qualitative interpretation of individual LDA topics,
         		as well as their optional relative weighting during preliminary document comparison by topics.</li>
         		</ol>
-				As these components of the search algorithm gradually become clearer through using the site,
-				users are encouraged to experiment with which parameters work best for them.
+				After familiarizing themselves with the basic search algorithm,
+				users are encouraged to experiment with these parameters
+				to find out what works best for them.
         	</p>
 
         	<br><br>
