--- a/templates/searchSettingsInner.html
+++ b/templates/searchSettingsInner.html
@@ -42,7 +42,7 @@
 
 	<h2>Reset to Default Values</h2>
 
-	<p>The following values strike have been found to strike a good balance:</p>
+	<p>The following values have been found to strike a good balance for the two levels:</p>
 	<p>$search_N_defaults</p>
 
 	<div class="row">
