adjust for ui_screenshot

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <meta property='og:title' content='vātāyana'/>
+        <meta property='og:image' content='/assets/ui_screenshot.png'/>
+        <meta property='og:description' content='intertextuality search for the Sanskrit pramāṇa-NLP corpus'/>
+        <meta property='og:url' content='https://www.vatayana.info'/>
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
         <link rel="stylesheet" href="custom.css" type="text/css">
 
@@ -71,7 +76,7 @@
                 </div><!-- entire top navbar row -->
 
             </div><!-- container -->
-            
+
         </nav>
 
         <div class="container">
@@ -82,9 +87,9 @@
 
         	<p><i>a window onto the Sanskrit pramāṇa-NLP corpus</i></p>
         	<p>(note: a "doc", i.e., document is roughly a paragraph)</p>
-        	
+
         	<br><br>
-        	
+
         	<div class="row">
 	        	<div class="col-md-3">
 					<form method="get" action="docExplore">
@@ -102,15 +107,15 @@
 					</form>
 				</div>
 			</div>
-			
+
 			<br><br>
 
 			<h2>Go Deeper</h2>
         	<br>
 
         	<p>
-        		Vātāyana illuminates intertextual connections 
-        		by performing three kinds of pairwise comparisons 
+        		Vātāyana illuminates intertextual connections
+        		by performing three kinds of pairwise comparisons
         		on corpus documents (current total ≈ 22k docs).
 
         		Comparison by modeled LDA topics is fast and captures abstract semantics,
