add examples to main page; clean up main and about

--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
                 </div><!-- entire top navbar row -->
 
             </div><!-- container -->
-            
+
         </nav>
 
         <div class="container">
@@ -79,9 +79,9 @@
             <br>
             <p><i>a window onto the Sanskrit pramāṇa-NLP corpus</i></p>
 
-            <p><b>Vātāyana</b> is a tool for exploring intertextuality relations within a corpus. It was developed in the context of studying a corpus of Sanskrit philosophical texts, but it is nearly completely language-independent and should be able to accomodate any tokenized (natural language) corpus on which topic modeling can be performed.</p>
+            <p><b>Vātāyana</b> (meaning “window” in Sanskrit) is a tool for exploring intertextuality relations within a corpus. It was developed in the context of studying a corpus of Sanskrit philosophical texts, but it is nearly completely language-independent and should be able to accomodate any tokenized (natural language) corpus on which topic modeling can be performed.</p>
 
-            <p>(more info coming soon...)</p>
+            <p>I'm writing it up for my PhD dissertation and will post the relevant document here soon...</p>
 
             <br><br>
 
@@ -94,7 +94,7 @@
                 </ul>
             </p>
             <p>I'd love to hear from you.
-            Find <a href="https://uni-leipzig1.academia.edu/TylerNeill">me (Tyler) on Academia</a> and send me an email.</p>
+            Message me on GitHub or email me (Gmail) at tyler.g.neill.</p>
 
             <br><br>
 
