--- a/templates/textPrioritize.html
+++ b/templates/textPrioritize.html
@@ -70,7 +70,7 @@
                 </div><!-- entire top navbar row -->
 
             </div><!-- container -->
-            
+
         </nav>
 
         <div class="container">
@@ -80,7 +80,7 @@
 
            <p>The following is a roughly chronological presentatation of texts in the corpus (numbers in square brackets give the document count for each — a rough measure of size). Only those texts selected here will be subjected to detailed similarity comparison (namely, with TF-IDF vectors and Smith-Waterman alignment) and returned as top similarity matches in docExplore and docCompare modes.</p>
 
-           <p>(<i>Changes you make will remain valid for your personal browsr session, i.e., until cookies and other site data are cleared.</i>)</p>
+           <p>Changes you make will remain valid for your personal browser session, i.e., until cookies and other site data are cleared.</p>
 
            {{ textPrioritizeInner_HTML | safe }}
 
