small changes to About; avg precision in batch_processing; docExplore time calc in IR_tools

--- a/templates/about.html
+++ b/templates/about.html
@@ -79,9 +79,11 @@
             <br>
             <p><i>a window onto the Sanskrit pramāṇa-NLP corpus</i></p>
 
-            <p><b>Vātāyana</b> (meaning “window” in Sanskrit) is a tool for exploring intertextuality relations within a corpus. It was developed in the context of studying a corpus of Sanskrit philosophical texts, but it is nearly completely language-independent and should be able to accomodate any tokenized (natural language) corpus on which topic modeling can be performed.</p>
-
-            <p>I'm writing it up for my PhD dissertation and will post the relevant document here soon...</p>
+            <p><b>Vātāyana</b> (meaning “window” in Sanskrit) is a tool for exploring intertextuality relations within a corpus.
+            It was developed as part of a dissertation on Sanskrit philosophy
+            (<a href="https://github.com/tylergneill/nbhu_materials">see here</a>),
+            but the algorithm is language-independent and should be able to accomodate
+            any tokenized natural language corpus on which topic modeling can be performed.</p>
 
             <br><br>
 
@@ -100,13 +102,13 @@
 
             <h2>Sister Site</h2>
             <br>
-            <p><a href="https://skrutable.pythonanywhere.com/">skrutable</a></p>
+            <p><a href="https://www.skrutable.info/">skrutable</a></p>
 
             <br><br>
 
             <h2>Technical</h2>
             <br>
-            <p>documentation on GitHub
+            <p>code and documentation on GitHub
                 <ul>
                     <li><a href="https://github.com/tylergneill/vatayana">vātāyana</a> (intertextuality research environment)</li>
                     <li><a href="https://github.com/tylergneill/pramana-nlp">pramāṇa-nlp</a> (philosophical Sanskrit corpus + preliminary LDA analyis)</li>
