extend dropdowns to docExplore

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -84,12 +84,22 @@
         	
 			<form id="doc_explore_search_bar" action="/docExplore" method="POST">
 
+				<!-- input -->
 			    <div class="row">
-			    	<div class="col-md-3">
-			            <input id="doc_id" name="doc_id" type="text" class="form-control" placeholder="Enter doc id" size="30"/>
+			    	<div class="col-md-2">
+<!--			            <input id="doc_id" name="doc_id" type="text" class="form-control" placeholder="Enter doc id" size="30"/>-->
+						<select name="text_abbreviation_input" id="text_abbreviation_input" class="form-control">
+							<option value="{{ text_abbreviation }}" size="15" selected="selected">Select text</option>
+						</select>
 			        </div>
-			        <div class="col-md-2">
+					<div class="col-md-3">
+						<select name="local_doc_id_input" id="local_doc_id_input" class="form-control">
+							<option value="{{ local_doc_id }}" size="15" selected="selected">Select doc id (optional)</option>
+						</select>
+			        </div>
+			        <div class="col-md-1">
 			            <input id="doc_explore_submit_button" type="submit" class="btn btn-block btn-primary" value="Submit"/>
+
 			        </div>
 			    </div>
 
@@ -109,5 +119,24 @@
 	</script>
 
     </body>
+
+	<script type="text/javascript">
+    	var abbrv2docs = {{ abbrv2docs|tojson|safe }};
+    	var abbrev2title = {{ text_abbrev2title|tojson|safe }};
+    	var section_labels = {{ section_labels|tojson|safe }};
+
+		var textAbbrevSel = document.getElementById("text_abbreviation_input");
+		var docIdSel = document.getElementById("local_doc_id_input");
+		textAbbrevSel.length = 1;
+		for (var x in abbrv2docs) {
+			textAbbrevSel.options[textAbbrevSel.options.length] = new Option(x + ' ' + abbrev2title[x], x);
+		}
+		textAbbrevSel.onchange = function() {
+			docIdSel.length = 1;
+			for (var y of abbrv2docs[this.value]) {
+			  docIdSel.options[docIdSel.options.length] = new Option(y + ' ' + section_labels[this.value + '_' + y], y);
+			}
+		}
+    </script>
 
 </html>
