--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -94,7 +94,7 @@
 			        </div>
 					<div class="col-md-3">
 						<select name="local_doc_id_input" id="local_doc_id_input" class="form-control">
-							<option value="{{ local_doc_id }}" size="15" selected="selected">Select doc id (optional)</option>
+							<option value="{{ local_doc_id }}" size="15" selected="selected">Select doc id</option>
 						</select>
 			        </div>
 			        <div class="col-md-1">
