set up HTML for second docExplore doc_id selection

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -89,19 +89,30 @@
 			    	<div class="col-md-2">
 <!--			            <input id="doc_id" name="doc_id" type="text" class="form-control" placeholder="Enter doc id" size="30"/>-->
 						<select name="text_abbreviation_input" id="text_abbreviation_input" class="form-control">
-							<option value="{{ text_abbreviation }}" size="15" selected="selected">Select text</option>
+							<option value="" size="15" selected="selected">Select text</option>
 						</select>
 			        </div>
 					<div class="col-md-3">
 						<select name="local_doc_id_input" id="local_doc_id_input" class="form-control">
-							<option value="{{ local_doc_id }}" size="15" selected="selected">Select doc id</option>
+							<option value="" size="15" selected="selected">Select doc id</option>
 						</select>
 			        </div>
 			        <div class="col-md-1">
 			            <input id="doc_explore_submit_button" type="submit" class="btn btn-block btn-primary" value="Submit"/>
-
 			        </div>
 			    </div>
+				<div class="row">
+			    	<div class="col-md-2">
+			        </div>
+					<div class="col-md-3">
+						<select name="local_doc_id_input_2" id="local_doc_id_input_2" class="form-control">
+							<option value="" size="15" selected="selected">Select doc id</option>
+						</select>
+			        </div>
+					<div class="col-md-1">
+			        </div>
+			    </div>
+
 
 			</form>
 
@@ -127,16 +138,22 @@
 
 		var textAbbrevSel = document.getElementById("text_abbreviation_input");
 		var docIdSel = document.getElementById("local_doc_id_input");
+		var docIdSel_2 = document.getElementById("local_doc_id_input_2");
+
 		textAbbrevSel.length = 1;
 		for (var x in abbrv2docs) {
 			textAbbrevSel.options[textAbbrevSel.options.length] = new Option(x + ' ' + abbrev2title[x], x);
 		}
 		textAbbrevSel.onchange = function() {
 			docIdSel.length = 1;
+			docIdSel_2.length = 1;
 			for (var y of abbrv2docs[this.value]) {
 			  docIdSel.options[docIdSel.options.length] = new Option(y + ' ' + section_labels[this.value + '_' + y], y);
+			  <!-- eventually want this to contract based on docIdSel -->
+			  docIdSel_2.options[docIdSel_2.options.length] = new Option(y + ' ' + section_labels[this.value + '_' + y], y);
 			}
 		}
+
     </script>
 
 </html>
