first working datatables for batch mode

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -125,6 +125,7 @@
 
 	    	$('#priority_col_table').DataTable( {"pageLength": 25} );
 	    	$('#secondary_col_table').DataTable( {"pageLength": 25} );
+	    	$('#batch_result_table').DataTable( {"pageLength": 25} );
 
 		} );
 	</script>
