use priority_texts, final basic formatting

--- a/templates/docExplore.html
+++ b/templates/docExplore.html
@@ -107,7 +107,7 @@
 			        </div>
 					<div class="col-md-3">
 						<select name="local_doc_id_input_2" id="local_doc_id_input_2" class="form-control">
-							<option value="" size="15" selected="selected">Second doc id for batch mode</option>
+							<option value="" size="15" selected="selected">Subsequent doc id (batch mode)</option>
 						</select>
 			        </div>
 					<div class="col-md-1">
@@ -118,13 +118,12 @@
 					<div class="col-md-2">
 			        </div>
 					<div class="col-md-3" class="range">
-						<input type="range" class="form-range" name="sw_threshold" id="sw_threshold" min="30" max="300" step="10" value="30"/>
+						<input type="range" class="form-range" name="sw_threshold" id="sw_threshold" min="20" max="200" step="10" value="50"/>
 			        </div>
 					<div class="col-md-1">
-						<p id="sw_threshold_slider_label">sw score > 30</p>
+						<p id="sw_threshold_slider_label">sw score > 50</p>
 			        </div>
 				</div>
-
 
 			</form>
 
