rm all mention of topic_weight and topic_toggle

--- a/templates/docCompareInner.html
+++ b/templates/docCompareInner.html
@@ -147,7 +147,7 @@
 		<h2>Doc Similarity Scores</h2>
 		<table class='display' style="margin-left: auto; margin-right: auto;">
 			<tr>
-				<td><h2><small>Topic Similarity<span title="K-dim vector cosine similarity, weights: $topic_weights">*</span></small></h2></td>
+				<td><h2><small>Topic Similarity<span title="K-dim vector cosine similarity">*</span></small></h2></td>
 				<td><h2><small>$topic_similiarity_score</small></h2></td>
 			</tr>
 			<tr>
