update copy and appearance for topicAdjust

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,9 +151,9 @@
 		<div class="row">
     		<div class="col-md-3">
     			<form method="get" action="topicAdjust">
-    				<input type="submit" class="btn btn-block btn-primary" value="Adjust Topic Settings" />
+    				<input type="submit" class="btn btn-block btn-primary" value="Relabel Topics" />
     			</form>
-				<p style="text-align:center;"><i>Interpret LDA topics differently <br> according to your own understanding</i></p>
+				<p style="text-align:center;"><i>Adjust LDA topic labels <br> according to your own understanding</i></p>
     		</div>
     		<div class="col-md-3">
     			<form method="get" action="topicVisualizeLDAvis">
