--- a/templates/topicAdjust.html
+++ b/templates/topicAdjust.html
@@ -78,7 +78,8 @@
            <h1>Adjust Topic Labels</h1>
            <br>
 
-           <p>Interpretive topic labels can be edited here.</p>
+           <p>The labels given for LDA topics are just one person's tentative interpretations.
+			   You can edit them here to fit your own understanding.</p>
 
            <p>Changes you make will remain valid for your personal browser session, i.e., until cookies and other site data are cleared.</p>
 
