--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
       		</form>
 			<p style="text-align:center;"><i>Analyze a single passage <br> and see similarity search results</i></p>
 			<p style="text-align:center;"><a href="docExplore?doc_id=NBh%C5%AB_104%2C6%5E1">example (single)</a></p>
-			<p style="text-align:center;"><i>Or choose a range of passages</i></p>
+			<p style="text-align:center;"><i>Or choose a range of passages <br> to see highlighted search results</i> </p>
 			<p style="text-align:center;"><a href="docExplore?doc_id=NBh%C5%AB_104%2C6%5E1&doc_id_2=NBh%C5%AB_154%2C22%5E2&sw_threshold=50">example (batch)</a></p>
 
 
